[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3"}
rand = "0.9.2"
## Bevy Inspector Egui makes it easy to modify widgets at runtime.
bevy-inspector-egui = "0.35.0"



[profile.dev]
opt-level = 1
panic="abort"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic="abort"

